fix(discovery): canonicalize bridge formation evidence